--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <div class="item-carrocel-officanvas">C</div>
+                            <div class="item-carrocel-officanvas">
+                                <img src="./imgs/banner_mobile/banner_03_mobile.png">
+                            </div>
                         </div>
                     </div>
 
