--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
 
                 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="5000">
+                        <div class="carousel-item carousel-item-mobile active" data-bs-interval="5000">
                             <div class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_01_mobile.png">
                             </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="5000">
+                        <div class="carousel-item carousel-item-mobile" data-bs-interval="5000">
                             <div class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_02_mobile.png">
                             </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="5000">
+                        <div class="carousel-item carousel-item-mobile" data-bs-interval="5000">
                             <div class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_03_mobile.png">
                             </div>
@@ -282,14 +282,17 @@
                 </div>
                 <div class="area-right-inst">
                     <br>
-                    <h2 class="spacing-home-br">
-                        Construindo Confiança, Gerando Valor
+                    <h2 class="title-insti">
+                        Construindo Confiança, Gerando Valor!
+                    </h2>
+                    <h2 class="title-insti-mobile">
+                        Construindo Confiança, <br>Gerando Valor!
                     </h2>
                     <br>
                     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="11000">
-                                <p class="sub-title">
+                                <p class="sub-title-institu">
                                     Com uma base sólida construída ao longo de três gerações da minha família, iniciei
                                     na profissão
                                     aos 18 anos, aprendendo com meu tio os segredos e as melhores práticas do ofício.
@@ -305,7 +308,7 @@
                                 </p>
                             </div>
                             <div class="carousel-item" data-bs-interval="11000">
-                                <p class="sub-title">
+                                <p class="sub-title-institu">
                                     Na profissão de chaveiro, a ética e os valores profissionais são pilares
                                     fundamentais em cada serviço que realizo. Herdeiro de uma tradição familiar que
                                     atravessa três gerações, aprendi desde cedo a importância da honestidade, da
