--- a/index.html
+++ b/index.html
@@ -102,22 +102,20 @@
             </div>
 
             <div class="offcanvas-body">
-
-
                 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item carousel-item-mobile active" data-bs-interval="5000">
-                            <div class="item-carrocel-officanvas">
+                            <div onclick="sendOrderWhastapp('Olá, tenho interesse em fechaduras digitais e gostaria de mais informações.')" class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_01_mobile.png">
                             </div>
                         </div>
                         <div class="carousel-item carousel-item-mobile" data-bs-interval="5000">
-                            <div class="item-carrocel-officanvas">
+                            <div onclick="sendOrderWhastapp('Olá, estou solicitando o serviço de troca de fechadura.')" class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_02_mobile.png">
                             </div>
                         </div>
                         <div class="carousel-item carousel-item-mobile" data-bs-interval="5000">
-                            <div class="item-carrocel-officanvas">
+                            <div onclick="btnWhatsappSend()" class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_03_mobile.png">
                             </div>
                         </div>
