--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </button>
 
                 <!-- Logo -->
-                <a class="navbar-brand logo " href="#">
+                <a class="navbar-brand logo " id="logo" href="#">
                     <img src="./imgs/logo.png" alt="Logo" />
                 </a>
 
@@ -105,12 +105,14 @@
                 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item carousel-item-mobile active" data-bs-interval="5000">
-                            <div onclick="sendOrderWhastapp('Olá, tenho interesse em fechaduras digitais e gostaria de mais informações.')" class="item-carrocel-officanvas">
+                            <div onclick="sendOrderWhastapp('Olá, tenho interesse em fechaduras digitais e gostaria de mais informações.')"
+                                class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_01_mobile.png">
                             </div>
                         </div>
                         <div class="carousel-item carousel-item-mobile" data-bs-interval="5000">
-                            <div onclick="sendOrderWhastapp('Olá, estou solicitando o serviço de troca de fechadura.')" class="item-carrocel-officanvas">
+                            <div onclick="sendOrderWhastapp('Olá, estou solicitando o serviço de troca de fechadura.')"
+                                class="item-carrocel-officanvas">
                                 <img src="./imgs/banner_mobile/banner_02_mobile.png">
                             </div>
                         </div>
@@ -671,10 +673,11 @@
 
                         <h6>Institucional</h6>
                         <div class="area-navegation-footer">
-                            <div class="links-footer">Home</div>
-                            <div class="links-footer">Serviços</div>
-                            <div class="links-footer">Sobre</div>
-                            <div class="links-footer">Contato</div>
+                            <div class="links-footer"><a href="#logo">Home</a></div>
+                            <div class="links-footer"><a href="#products">Produtos</a></div>
+                            <div class="links-footer"><a href="#services">Serviços</a></div>
+                            <div class="links-footer"><a href="#about">Sobre</a></div>
+                            <div class="links-footer"><a href="#contact">Contato</a></div>
                         </div>
 
                     </div>
