--- a/index.html
+++ b/index.html
@@ -664,9 +664,16 @@
                         </div>
 
                         <div class=" area-icons-footer d-flex mt-2">
-                            <div class="icon-footer pointer"> <i class="fa-brands fa-whatsapp"></i></div>
-                            <div class="icon-footer  pointer"><i class="fa-brands fa-instagram"></i></div>
-                            <div class="icon-footer pointer"><i class="fa-brands fa-facebook"></i></div>
+                            <div onclick="btnWhatsappSend()" class="icon-footer pointer"> <a> <i
+                                        class="fa-brands fa-whatsapp"></i></a></div>
+
+                            <div class="icon-footer  pointer"><a class="text-white" target=_blank
+                                    href="https://www.instagram.com/ricardochaveiro_/"> <i
+                                        class="fa-brands fa-instagram"></i></a></div>
+
+                            <div class=" icon-footer pointer"><a class="text-white" target=_blank
+                                    href="https://www.facebook.com/ricardo.michel.969?locale=pt_BR"> <i
+                                        class="fa-brands fa-facebook"></i></a></div>
                         </div>
                     </div>
                     <div class="options-navegation-mid">
