--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         <div class="area-services">
             <br id="depoiments">
             <h1 class="text-center text-default"><strong>Depoimentos dos nossos Clientes</strong></h1>
-            <br><br><br>
+            <br class="spacing-home-br"><br class="spacing-home-br"><br>
             <div id="areaDepoiments" class="container ">
             </div>
             <br><br><br>
@@ -828,8 +828,4 @@ ${contextProductSelect?.description.replace(/<[^>]*>/g, '')}`;
     });
 </script>
 
-
-
 </html>
-
-696.200.64-38
