--- a/index.html
+++ b/index.html
@@ -2,45 +2,90 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Ricardo Tec. Chaveiro</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/modal.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/index.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/stylesDefault.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/responsives.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/animations.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/bootstrap/css/bootstrap.min.css'>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Ricardo Tec. Chaveiro | Fechaduras Digitais e Serviços Profissionais</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description"
+        content="Chaveiro profissional em Natal/RN com tradição de 3 gerações. Instalação de fechaduras digitais, cópias de chaves, abertura de portas, cofres e mais. Ética, confiança e segurança.">
+
+    <meta name="keywords"
+        content="chaveiro Natal RN, fechadura digital, cópia de chave, Ricardo Chaveiro, abertura de porta, abertura de cofre, chaveiro urgente, troca de segredo, chaveiro residencial">
+
+
+    <meta name="author" content="Ricardo Tec. Chaveiro">
+
+    <meta property="og:title" content="Ricardo Tec. Chaveiro | Soluções em Segurança e Tecnologia">
+    <meta property="og:description"
+        content="Fechaduras digitais, cópias de chaves, abertura de portas e cofres com profissionalismo e tradição familiar.">
+    <meta property="og:image" content="https://enioutf8.github.io/RC/imgs/logo.png">
+
+    <meta property="og:url" content="https://enioutf8.github.io/RC/">
+    <meta property="og:type" content="website">
+
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ricardo Tec. Chaveiro | Confiança em Chaveiro Digital">
+    <meta name="twitter:description"
+        content="Serviços com ética, segurança e tradição de três gerações. Fechaduras digitais, abertura de cofres e mais.">
+    <meta name="twitter:image" content="https://enioutf8.github.io/RC/imgs/logo.png">
+
+    <script type="application/ld+json">
+                {
+                    "@context": "https://schema.org",
+                    "@type": "Locksmith",
+                    "name": "Ricardo Tec. Chaveiro",
+                    "image": "https://enioutf8.github.io/RC/imgs/logo.png",
+                    "url": "https://enioutf8.github.io/RC/",
+                    "telephone": "+55-84-98874-5331",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "addressLocality": "Natal",
+                        "addressRegion": "RN",
+                        "addressCountry": "BR"
+                    },
+                    "description": "Chaveiro com tradição de três gerações. Alio conhecimento ancestral a técnicas modernas, com ética, sigilo e dedicação. Atuo com fechaduras digitais, cópia de chaves, cofres e outros serviços.",
+                    "sameAs": [
+                        "https://www.instagram.com/ricardochaveiro_/",
+                        "https://www.facebook.com/ricardo.michel.969?locale=pt_BR"
+                    ]
+                }
+    </script>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/modal.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/stylesDefault.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/responsives.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/animations.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap/css/bootstrap.min.css">
+
+    <link rel="icon" type="image/png" href="./imgs/icon.ico">
 </head>
 
 
 <body>
     <header class="bg-default-blue">
 
-        <!-- Navbar -->
+
         <nav class="navbar navbar-custom navbar-expand-lg">
             <div class="container ">
 
-                <!-- Botão Toggle (aparece no mobile) -->
                 <button class="navbar-toggler me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <!-- Logo -->
                 <a class="navbar-brand logo " id="logo" href="#">
                     <img src="./imgs/logo.png" alt="Logo" />
                 </a>
-
 
                 <button class="hidden-toggler  navbar-toggler me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <!-- Menu Desktop -->
                 <div class="collapse navbar-collapse d-none d-lg-flex justify-content-between">
                     <ul class="navbar-nav align-items-center">
                         <li class="nav-item">
